--- a/css/index.css
+++ b/css/index.css
@@ -41,9 +41,9 @@ body::after {
 }
 
 header { color:#981a1a; border-bottom:1px solid #981a1a; margin:1% auto 1% auto; padding:2% }
-header h1 { font-size:3em; font-weight: bold}
+header h1 { font-size:3em; font-weight: bold; }
 
-div.retour{ border-bottom:1px solid #981a1a; padding-bottom:1%; margin-bottom:1%; }
+div.retour { border-bottom:1px solid #981a1a; padding-bottom:1%; margin-bottom:1%; }
 
 	.bouton { 
 		background-color:#97c00e; display:inline-block; padding:5px 10px; border-radius:10px; 
@@ -72,10 +72,11 @@ div.descLang p { margin: 15px 0; text-align: center; font-size: 1.3em;  }
 
 .hidden, .contentCat { display: none}
 #content .lien { display: inline-block; padding: 4px 7px; margin: 2px 0; border-radius: 5px }
-h2 { text-align: center; font-size:36px; font-weight: bold; margin: 5px 0}
+h2 { text-align: center; font-size:36px; font-weight: bold; margin: 5px 0; color: #981a1a }
 
-.color537f70 h2 { color: #537f70}.colorb05339 h2 { color: #b05339}.color648db1 h2 { color: #648db1}.colore5a630 h2 { color: #e5a630}.color965c9e h2 { color: #965c9e}
-.color537f70 a.lien { background-color: #537f70}.colorb05339 a.lien { background-color: #b05339}.color648db1 a.lien { background-color: #648db1}.colore5a630 a.lien { background-color: #e5a630}.color965c9e a.lien { background-color: #965c9e}
+/*.color537f70 h2 { color: #537f70 } .colorb05339 h2 { color: #b05339 } .color648db1 h2 { color: #648db1 } .colore5a630 h2 { color: #e5a630 } .color965c9e h2 { color: #965c9e }
+.color537f70 a.lien { background-color: #537f70 } .colorb05339 a.lien { background-color: #b05339 } .color648db1 a.lien { background-color: #648db1 } .colore5a630 a.lien { background-color: #e5a630}.color965c9e*/
+a.lien { background-color: #981a1a }
 
 footer { color:#fff; border-top:1px solid #981a1a; margin:2% auto; padding:2%; text-align:center; font-size:1.1em }
 
